# ai_assistant_chainlit

./: .gitignore  Makefile  README.md  docker-compose.yml  improvements.md
.cursor/rules/: general.mdc
chainlit/: .env-example  main.py  main_propo  pyproject.toml
chainlit/chainlit_components/: __init__.py  auth.py  messages.py  starter.py
chainlit/config/: __init__.py  chat_settings.py  settings.py
chainlit/services/: __init__.py  auth_service.py  openai_service.py
django-backend/: pyproject.toml
django-backend/accounts/: api.py  api_urls.py  forms.py  tests.py  views.py
django-backend/accounts/tests/: test_api_endpoints.py  test_loging_views.py
django-backend/core/: settings.py  urls.py
django-backend/static/css/: styles.css
django-backend/templates/: base.html
docs/: architecture.md  chainlit.md  django_backend.md  makefile_commands.md  nginx.md  prisma.md  requirements_and_run.md
litellm-proxy/: config.yaml
nginx/: nginx.conf
postgres/docker-entrypoint-initdb.d/: create-multiple-databases.sh
prisma/: .env-template  package.json
