[project]
name = "chainlint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncpg>=0.30.0",
    "boto3>=1.37.35",
    "chainlit>=2.5.5",
    "httpx>=0.28.1",
    "ipython>=9.1.0",
    "mcp>=1.6.0",
    "openai>=1.74.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]
